# xr-hpgt

./: .gitignore  CMakeLists.txt  README.md
app/: run_correlation_toff.cc  run_hpgt.cc
include/hpgt/config/: config_parser.h  imu_data_config.h  pose_data_config.h  system_config.h
include/hpgt/estimator/: calib_parameter.h  estimator.h  factor_adder.h
include/hpgt/factor/: abs_pose_factor.hpp  imu_acc_factor.hpp  imu_gyr_factor.hpp  spline_knot_prior_factor.hpp
include/hpgt/initializer/: i2p_extrinsic_initializer.h  imu_preintegrator.h  initializer_helper.h  initializer_utils.hpp  p2p_extrinsic_initializer.h  spatial_extrinsic_initializer.h  time_offset_initializer.hpp
include/hpgt/sensor_data/: imu_data.h  pose_data.h  sensor_data_manager.h
include/hpgt/spline/: ceres_spline_helper_jet.hpp  euclidean_spline.hpp  so3_spline.hpp  spline_bundle.hpp  spline_meta.hpp  spline_utils.hpp
module_test/: initializer_test.cc  sensor_data_manager_test.cc  spline_test.cc  system_config_test.cc
resource/real_world_data/public_benchmark/EuRoC_V203/: ORBSLAM3_traj.txt  hpgt_config.json  hpgt_output_calib.json  hpgt_output_traj.txt  raw_mocap.txt
resource/real_world_data/public_benchmark/TUM_VI_room5/: ORBSLAM3_traj.txt  hpgt_config.json  hpgt_output_calib.json  hpgt_output_traj.txt  raw_mocap.txt
resource/real_world_data/self_collected/V101/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V102/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V103/: hpgt_config.json  hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V104/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V105/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V201/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V202/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V203/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V204/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/real_world_data/self_collected/V205/: hpgt_output_calib.json  hpgt_output_traj.txt  imu.txt  pose.txt
resource/simulated_data/: config_template.json  dut.txt  ground_truth.txt  hpgt_config.json  hpgt_output_calib.json  hpgt_output_traj.txt  imu_0.txt  imu_1.txt  mocap.txt
resource/simulated_data/spline_result/: spline_imu.txt  spline_traj.txt
src/config/: system_config.cc
src/estimator/: estimator.cc  factor_adder.cc
src/initializer/: i2p_extrinsic_initializer.cc  imu_preintegrator.cc  initializer_helper.cc  p2p_extrinsic_initializer.cc  spatial_extrinsic_initializer.cc  time_offset_initializer.cc
src/sensor_data/: imu_data.cc  pose_data.cc  sensor_data_manager.cc
